--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A modern farm hand app.",
   "main": "index.js",
   "scripts": {
-    "start": "cd ranch-hand-app/server && npm start",
-    "heroku-postbuild": "cd ranch-hand-app/client && npm run build"
+    "start": "cd ranch-hand-app/server && npm install && npm start",
+    "heroku-postbuild": "cd ranch-hand-app/client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
