--- a/ranch-hand-app/client/package.json
+++ b/ranch-hand-app/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.4.1",
     "react-table": "^7.0.4",
     "react-table-6": "^6.11.0",
+    "react-table-v6": "^6.8.6",
     "styled-components": "^5.1.0"
   },
   "scripts": {
